--- a/vite-vue/package.json
+++ b/vite-vue/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vite-vue",
+  "name": "my-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,8 +16,6 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9",
-    "vue-tsc": "^1.4.2"
+    "vite": "^4.3.9"
   }
 }
